<?xml version="1.0" encoding="utf-8"?><!--
  ~ Android 2 Linux Notifications - A way to display Android phone notifications on Linux
  ~ Copyright (C) 2023  patri9ck and contributors
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_servers">
    <fragment
        android:id="@+id/navigation_servers"
        android:name="dev.patri9ck.a2ln.server.ServersFragment"
        android:label="@string/servers_title"
        tools:layout="@layout/fragment_servers" />
    <fragment
        android:id="@+id/navigation_apps"
        android:name="dev.patri9ck.a2ln.app.AppsFragment"
        android:label="@string/apps_title"
        tools:layout="@layout/fragment_apps" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.patri9ck.a2ln.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
</navigation>
