<?xml version="1.0" encoding="utf-8"?><!--
  ~ Android 2 Linux Notifications - A way to display Android phone notifications on Linux
  ~ Copyright (C) 2023  patri9ck and contributors
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_space">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/qr_code_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_space"
            android:text="@string/scan_qr_code"
            app:icon="@drawable/ic_qr_code" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/server_ip_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/ip"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_space"
        style="@style/TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pairing_port_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:importantForAutofill="no"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pair_dialog_information" />
    </LinearLayout>
</ScrollView>