<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022  Patrick Zwick and contributors
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_space">
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pairing_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dialog_space"
        android:indeterminate="true" />
    <TextView
        style="@style/HeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip" />
    <TextView
        android:id="@+id/own_ip_text_view"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_space" />
    <TextView
        style="@style/HeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/public_key" />
    <TextView
        android:id="@+id/own_public_key_text_view"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_space" />
    <TextView
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pairing_dialog_information" />
</LinearLayout>
